<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ConfigurationFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/configuration_titile"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="427dp"
        android:layout_height="402dp"
        android:layout_marginTop="45sp"
        android:background="@drawable/diseno_fondo_gris"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.115">

        <Button
            android:id="@+id/changeAccountBtn"
            android:layout_width="223dp"
            android:layout_height="59dp"
            android:background="@drawable/diseno_botones_verdes"
            android:drawableLeft="@drawable/add_user_icon"
            android:fontFamily="@font/nunito_light"
            android:hapticFeedbackEnabled="true"
            android:text="@string/change_user_button"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/logOutBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.573"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="194dp" />

        <Button
            android:id="@+id/logOutBtn"
            android:layout_width="219dp"
            android:layout_height="55dp"
            android:layout_marginBottom="160dp"
            android:background="@drawable/diseno_botones_verdes"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:fontFamily="@font/nunito_light"
            android:text="@string/logOut_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="193dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>